# GameOfLife

./: CMakeLists.txt  README.md
include/: animator.hpp  cell.hpp  painter.hpp  universe.hpp
src/: CMakeLists.txt  animator.cpp  benchmark.cpp  cell.cpp  gosper_glider.univ  main.cpp  painter.cpp  universe.cpp
tests/: CMakeLists.txt  tests.cpp
